nbdev: don't eval `deta` initialization with keys

--- a/notebooks/00_link_ninja.ipynb
+++ b/notebooks/00_link_ninja.ipynb
@@ -183,6 +183,7 @@
    "outputs": [],
    "source": [
     "#|exports\n",
+    "#|eval: false\n",
     "\n",
     "# Initialize with a Project Key\n",
     "deta = Deta(os.environ[\"PROJECT_KEY\"])"
