nbdev: don't eval bot initialization with keys

--- a/notebooks/00_link_ninja.ipynb
+++ b/notebooks/00_link_ninja.ipynb
@@ -918,6 +918,7 @@
    "outputs": [],
    "source": [
     "#|exports\n",
+    "#|eval: false\n",
     "\n",
     "bot = telebot.TeleBot(os.environ[\"BOT_TOKEN\"])"
    ]
