use fastapi to run on deta and update devcontainer

--- a/notebooks/00_link_ninja.ipynb
+++ b/notebooks/00_link_ninja.ipynb
@@ -1732,6 +1732,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following the easiest way to run but running on deta.space requires an \"app\" so we'll be using FastAPI. This is just for your information."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1743,6 +1750,7 @@
     "# check if a webhook already exists\n",
     "if bot.get_webhook_info().url != f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}':\n",
     "\n",
+    "    # jupyter already runs in a loop so this is needed to work in a notebook\n",
     "    nest_asyncio.apply()\n",
     "\n",
     "    # https://pytba.readthedocs.io/en/latest/sync_version/index.html#telebot.TeleBot.set_webhook\n",
@@ -1750,7 +1758,40 @@
     "        webhook_url=f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}', # https://yourdomain.tld/bot_token\n",
     "        secret_token=os.environ[\"WEBHOOK_PASSWORD\"], # remove if you don't want to set one\n",
     "        drop_pending_updates=True\n",
+    "    )\n",
+    "    \n",
+    "else: # create webhook\n",
+    "    bot.remove_webhook() # remove any existing webhooks\n",
+    "\n",
+    "    # create new webhook\n",
+    "    bot.set_webhook(\n",
+    "        url=f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}',\n",
+    "    )\n",
+    "    \n",
+    "    bot.run_webhooks(\n",
+    "        webhook_url=f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}', # https://yourdomain.tld/bot_token\n",
+    "        secret_token=os.environ[\"WEBHOOK_PASSWORD\"], # remove if you don't want to set one\n",
+    "        drop_pending_updates=True\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using FastAPI:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|exports\n",
+    "#|eval: false\n",
+    "\n",
+    "app = fastapi.FastAPI(docs=None, redoc_url=None)"
    ]
   },
   {
@@ -1795,7 +1836,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
