fix setting webhook logic

--- a/notebooks/00_link_ninja.ipynb
+++ b/notebooks/00_link_ninja.ipynb
@@ -1790,6 +1790,17 @@
     "#|exports\n",
     "#|eval: false\n",
     "\n",
+    "if bot.get_webhook_info().url != f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}':\n",
+    "    bot.remove_webhook() # remove any existing webhooks\n",
+    "\n",
+    "    # create new webhook\n",
+    "    bot.set_webhook(\n",
+    "        url=f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}',\n",
+    "        secret_token=os.environ[\"WEBHOOK_PASSWORD\"],\n",
+    "        drop_pending_updates=True\n",
+    "    )\n",
+    "    \n",
+    "\n",
     "# https://github.com/eternnoir/pyTelegramBotAPI/blob/master/examples/webhook_examples/webhook_fastapi_echo_bot.py\n",
     "app = fastapi.FastAPI(docs=None, redoc_url=None)"
    ]
