forgot to import fastapi

--- a/notebooks/00_link_ninja.ipynb
+++ b/notebooks/00_link_ninja.ipynb
@@ -1802,6 +1802,8 @@
     "    \n",
     "\n",
     "# https://github.com/eternnoir/pyTelegramBotAPI/blob/master/examples/webhook_examples/webhook_fastapi_echo_bot.py\n",
+    "import fastapi\n",
+    "\n",
     "app = fastapi.FastAPI(docs=None, redoc_url=None)"
    ]
   },
