update reqs to match main (avoid merge conflict), show code to use `run.webhooks`

--- a/notebooks/00_link_ninja.ipynb
+++ b/notebooks/00_link_ninja.ipynb
@@ -43,7 +43,8 @@
     "from telebot import apihelper\n",
     "import validators\n",
     "import ulid\n",
-    "import nest_asyncio"
+    "import nest_asyncio\n",
+    "import fastapi"
    ]
   },
   {
@@ -1744,34 +1745,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#|exports\n",
     "#|eval: false\n",
     "\n",
     "# check if a webhook already exists\n",
-    "if bot.get_webhook_info().url != f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}':\n",
+    "# if bot.get_webhook_info().url != f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}':\n",
     "\n",
-    "    # jupyter already runs in a loop so this is needed to work in a notebook\n",
-    "    nest_asyncio.apply()\n",
+    "#     # jupyter already runs in a loop so this is needed to work in a notebook\n",
+    "#     nest_asyncio.apply()\n",
     "\n",
-    "    # https://pytba.readthedocs.io/en/latest/sync_version/index.html#telebot.TeleBot.set_webhook\n",
-    "    bot.run_webhooks(\n",
-    "        webhook_url=f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}', # https://yourdomain.tld/bot_token\n",
-    "        secret_token=os.environ[\"WEBHOOK_PASSWORD\"], # remove if you don't want to set one\n",
-    "        drop_pending_updates=True\n",
-    "    )\n",
+    "#     # https://pytba.readthedocs.io/en/latest/sync_version/index.html#telebot.TeleBot.set_webhook\n",
+    "#     bot.run_webhooks(\n",
+    "#         webhook_url=f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}', # https://yourdomain.tld/bot_token\n",
+    "#         secret_token=os.environ[\"WEBHOOK_PASSWORD\"], # remove if you don't want to set one\n",
+    "#         drop_pending_updates=True\n",
+    "#     )\n",
     "    \n",
-    "else: # create webhook\n",
-    "    bot.remove_webhook() # remove any existing webhooks\n",
+    "# else: # create webhook\n",
+    "#     bot.remove_webhook() # remove any existing webhooks\n",
     "\n",
-    "    # create new webhook\n",
-    "    bot.set_webhook(\n",
-    "        url=f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}',\n",
-    "    )\n",
+    "#     # create new webhook\n",
+    "#     bot.set_webhook(\n",
+    "#         url=f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}',\n",
+    "#     )\n",
     "    \n",
-    "    bot.run_webhooks(\n",
-    "        webhook_url=f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}', # https://yourdomain.tld/bot_token\n",
-    "        secret_token=os.environ[\"WEBHOOK_PASSWORD\"], # remove if you don't want to set one\n",
-    "        drop_pending_updates=True\n",
-    "    )"
+    "#     bot.run_webhooks(\n",
+    "#         webhook_url=f'{os.environ[\"DOMAIN\"]}/{os.environ[\"BOT_TOKEN\"]}', # https://yourdomain.tld/bot_token\n",
+    "#         secret_token=os.environ[\"WEBHOOK_PASSWORD\"], # remove if you don't want to set one\n",
+    "#         drop_pending_updates=True\n",
+    "#     )"
    ]
   },
   {
@@ -1802,8 +1804,6 @@
     "    \n",
     "\n",
     "# https://github.com/eternnoir/pyTelegramBotAPI/blob/master/examples/webhook_examples/webhook_fastapi_echo_bot.py\n",
-    "import fastapi\n",
-    "\n",
     "app = fastapi.FastAPI(docs=None, redoc_url=None)"
    ]
   },
